Enable preview for jdk15